--- a/entrega_1.qmd
+++ b/entrega_1.qmd
@@ -8,18 +8,65 @@ output-file: "Entrega 1 - Gustavo"
 source("rdocs/entrega_1.R")
 ```
 
-# Análises
-
-## Análise tal
-
-Introdução da análise
 
 ```{r}
-#| label: fig-g1
-#| fig-cap: "Gráfico de barras teste "
-g1
+# Rodar apenas uma vez na vida!
+## Instalando o tinytex(pacote apenas)
+### CRAN version
+install.packages('tinytex')
+
+
+## Baixando o tinytex
+library(tinytex)
+tinytex::install_tinytex()
 ```
 
-descritiva $\ref{fig-g1}$ volta pra figura
+# Objetivo
+
+Esse template foi criado para o alocado conseguir observar como ficaria sua análise o arquivo principal. É daqui que o gerente de projetos irá copiar a análise e inserir no documento principal que gerará o relatório estatístico.
+
+# Análises
+
+## Análise 3
+
+## Análise 4
+
+```{r}
+#| label: fig-
+#| fig-cap: "Gráfico "
 
 
+
+```
+
+
+::: {#quad- layout-align="center" quad-pos="H"}
+```{=latex}
+
+
+
+```
+
+Medidas resumo da 
+:::
+
+
+
+::: {#tbl-modalidades layout-align="center" tbl-pos="H"}
+```{=latex}
+
+
+```
+
+
+:::
+
+
+
+
+$\ref{fig-}$
+
+[@tbl-]
+
+
+[**Quadro** @quad-]
