--- a/entrega_3.tex
+++ b/entrega_3.tex
@@ -235,18 +235,20 @@
 
 \section{Análises}\label{anuxe1lises}
 
-\subsection{Análise 3}\label{anuxe1lise-3}
+\subsection{Análise da distribuição da idade dos clientes de Âmbar Seco
+a depender das
+lojas}\label{anuxe1lise-da-distribuiuxe7uxe3o-da-idade-dos-clientes-de-uxe2mbar-seco-a-depender-das-lojas}
 
-Esta análise, busca-se compreender e identificar as caracteristicas
-etarais do clientes de diferentes loja em Âmabr seco, com o objetivo de
-descobrir se existe uma variação significativa no perfil das idades dos
-clientes entre as lojas da região. Ná analise será utilizado as
-variaveis idade, que é quantitativa discreta e loja, que é qualitativa
+Esta análise, busca-se compreender e identificar as características
+etárias dos clientes de diferentes lojas em Âmbar Seco, com o objetivo
+de descobrir se existe uma variação significativa no perfil das idades
+dos clientes entre as lojas da região. Na análise serão utilizadas as
+variáveis idade, que é quantitativa discreta, e loja, que é qualitativa
 nominal. A visualização será através de um boxplot bivariado, o qual é
-mais adequado para essa analise, onde cada boxplot será representado por
-uma loja diferente da região, a linha central nele representara a
-mediana das iades e o losangolo representa a media, e por um quadro,
-onde terá os dados das principais medidas calculadas na análise
+mais adequado para essa análise, onde cada boxplot será representado por
+uma loja diferente da região. A linha central nele representará a
+mediana das idades e o losango representará a média, e por um quadro,
+onde terá os dados das principais medidas calculadas na análise.
 
 \begin{figure}[H]
 
@@ -265,36 +267,35 @@ Nome da loja em Ambar Seco}
 
 \caption{\label{quad-idade_loja}Através do gráfico
 \(\ref{fig-idade_loja}\) e pelo quadro {[}**Quadro** @quad-{]} é
-possivel visualizar uma notavel diferença no perfil etario da loja
+possível visualizar uma notável diferença no perfil etário da loja
 Vendinha Rápida com as outras três lojas da região. A loja Ferraria Seca
 possui a clientela mais jovem da região, tendo uma média de 33,67 anos e
 mediana de 30,5. As lojas Saloon e Banco Careca possuem uma clientela
-mais jovem, com as medianas de 32,5 e 34 anos, tendo um perfil etario
-bem proximo com a de Ferraria Seca. A loja que tem um publico mais
-velho, e mais distinto das demais, é a Vendinha Rápida, que possui uma
-media de 40,34 e uma mediana de 41 anos. O Banco careca e a Vendinha
-Rápida possuem uma menor dispersão de idade, por ter baixos desvios
-padrões, sendo 5,57 e 6,03, ou seja, as clientela dessas lojas possui
-uma idade bastante semelhante. Mas a Vendinha Rápida é a que possui a
-menor dispersão entre todas e o Banco Careca possui a maior homogenidade
-de clientes, tendo um intervalo interquartil de 9 anos. Já as lojas
+mais jovem, com as medianas de 32,5 e 34 anos, tendo um perfil etário
+bem próximo ao de Ferraria Seca. A loja que tem um público mais velho, e
+mais distinto das demais, é a Vendinha Rápida, que possui uma média de
+40,34 e uma mediana de 41 anos. O Banco Careca e a Vendinha Rápida
+possuem uma menor dispersão de idade, por ter baixos desvios padrões,
+sendo 5,57 e 6,03, ou seja, as clientelas dessas lojas possuem uma idade
+bastante semelhante. Mas a Vendinha Rápida é a que possui a menor
+dispersão entre todas e o Banco Careca possui a maior homogeneidade de
+clientes, tendo um intervalo interquartil de 9 anos. Já as lojas
 Ferraria Seca e Saloon possuem uma maior dispersão entre as lojas, por
-ter altos desvios padrões, sendo 13,31 e 12,69. Com isso é possivel
+ter altos desvios padrões, sendo 13,31 e 12,69. Com isso, é possível
 perceber que nessas duas lojas possuem uma clientela mais jovem, mas
-tendo uma grande mistura de idades, o que é possivel visualizar pelos
-outliers, que são valores discrepantes em relação as demais idades, A
-Ferraria Seca e Saloon possuem clientes com idades mais elevada, mesmo
-tendo clientes mais jovens, fazendo que a media desas lojas aumentem em
-relação a mediana. As duas lojas também possuem uma assimetria mais a
+tendo uma grande mistura de idades, o que é possível visualizar pelos
+outliers, que são valores discrepantes em relação às demais idades. A
+Ferraria Seca e Saloon possuem clientes com idades mais elevadas, mesmo
+tendo clientes mais jovens, fazendo que a média dessas lojas aumente em
+relação à mediana. As duas lojas também possuem uma assimetria mais à
 direita, sendo positiva, ressaltando que existe uma grande diferença nas
-idades da clientela das lojas. Em contra partida, O Banco careca possui
-a distribuição mais simetrica em relação as outras, tendo a menor
+idades da clientela das lojas. Em contrapartida, O Banco Careca possui a
+distribuição mais simétrica em relação às outras, tendo a menor
 diferença de idade dos clientes, e ela não apresenta valores
-discrepantes. A Vendinha Rápida possui uma assimetria mais a esquerda,
-sendo negativa, mostrando que a maioria dos clientes são mais velho,
-tendo poucos clientes jovens, mas também não possui valores
-discrepantes, confirmando que não existe um grande diferença de idade
-dos clientes.}
+discrepantes. A Vendinha Rápida possui uma assimetria mais à esquerda,
+sendo negativa, mostrando que a maioria dos clientes é mais velha, tendo
+poucos clientes jovens, mas também não possui valores discrepantes,
+confirmando que não existe uma grande diferença de idade dos clientes.}
 
 \centering{
 
